--- a/POEClaims/Views/Claim/Create.cshtml
+++ b/POEClaims/Views/Claim/Create.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@{
+﻿﻿<!--@{
 ViewData["Title"] = "New Claim";
 }
 
@@ -27,4 +27,4 @@ ViewData["Title"] = "New Claim";
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
     <a href="@Url.Action("Index")" class="btn btn-secondary">Cancel</a>
-</form>
+</form>-->
