--- a/POEClaims/Views/Shared/_Menu.cshtml
+++ b/POEClaims/Views/Shared/_Menu.cshtml
@@ -3,13 +3,14 @@
     <a href="@Url.Action("Index", "Home")">
         <button class="gray-btn">Home</button>
     </a>
-    <a href="@Url.Action("Claim", "Home")">
+    <a href="@Url.Action("Submit", "Claim")">
         <button class="gray-btn">Claim</button>
     </a>
+
     <a href="@Url.Action("Track_Claim", "Home")">
         <button class="gray-btn">Track Claim</button>
     </a>
-    <a href="@Url.Action("Submit", "Home")">
+   <!-- <a href="@Url.Action("Submit", "Home")">
         <button class="gray-btn">Track Claim</button>
-    </a>
+    </a>-->
 </div>
