--- a/POEClaims/Views/Home/Index.cshtml
+++ b/POEClaims/Views/Home/Index.cshtml
@@ -332,11 +332,11 @@
             <p>Secure access for academic staff and administrators. Secure claim processing.</p>
 
         </header>
-        <div class="cta-buttons" style="margin-top: 2rem;">
+       <!-- <div class="cta-buttons" style="margin-top: 2rem;">
             <a href="@Url.Action("Index", "Claim")" class="btn btn-primary">
                 View All Claims
             </a>
-        </div>
+        </div> -->
 
 
 
