--- a/POEClaims/Views/Home/Index.cshtml
+++ b/POEClaims/Views/Home/Index.cshtml
@@ -439,6 +439,12 @@
                     <button type="submit" class="role-btn" onclick="setRole('Program_coordinator')">
                         Login as Program Coordinator
                     </button>
+
+                    <button type="submit" class="role-btn" onclick="setRole('HR')">
+                        Login as Human Resource Manager
+                    </button>
+
+
                 </div>
 
 
